# AE-Server

./: db.sqlite3  pyproject.toml  requirement.txt  requirements.txt
Backend/: settings.py  urls.py
admin_site/: urls.py  views.py
api/: urls.py  views.py
api/migrations/: 0002_alter_event_attendees_alter_event_roomids_and_more.py
app/: urls.py  views.py
media/vedeos/: recorded-video_LFAjNlf.webm
