[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["abini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
django = "^5.0.6"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
django-rest-swagger = "^2.2.0"
django-sslserver = "^0.22"
djangorestframework = "^3.15.1"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.3.0"
python-dotenv = "^1.0.1"

reportlab = "^4.2.0"
yagmail = "^0.15.293"
pymysql = "^1.1.1"
dj-database-url = "^2.2.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
